--- a/wwii-artifact-catalog-FINAL.html
+++ b/wwii-artifact-catalog-FINAL.html
@@ -582,12 +582,12 @@
 
         // Firebase Configuration - ADD YOUR CONFIG HERE
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+           apiKey: "AIzaSyChvAKKfDCkljNQmTyQsrhE57pm4H751EQ",
+authDomain: "wrighttech-inventory.firebaseapp.com",
+projectId: "wrighttech-inventory",
+storageBucket: "wrighttech-inventory.firebasestorage.app",
+messagingSenderId: "891021456690",
+appId: "1:891021456690:web:e81d5b7ff36dd3f687532b"
         };
 
         // Initialize Firebase
